[package]
name = "cairo-bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "5e8b9d4a2aacbdd284ff3a9dea6bb6e6d669ee1e", features = ["extensive_hints"] }
num-traits = "0.2.19"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
starknet-crypto = "0.6.2"
starknet-types-core = "0.1.2"
thiserror = "1.0.61"
thiserror-no-std = "2.0.2"

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.19.0"

